alt init count
